syntax = "proto3";

package yaniv.protos;

service HelloWorld {
  rpc hello (HelloRequest) returns (HelloResponse) {}
}

message HelloRequest {
  string name = 1;
  repeated uint32 numbers = 2;
  map<string, int32> map = 3;
}

message HelloResponse {
  string greeting = 1;
}